package.json changes

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Project to test core node modules, npm concepts, publishing npm package, etc",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "keywords": [],
-  "author": "",
+  "author": "Pranav Jadhav",
   "license": "ISC",
   "dependencies": {
     "underscore": "^1.13.6"
